basic ui testing

--- a/src/ui/ui.fxml
+++ b/src/ui/ui.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
@@ -7,8 +8,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-
-<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="ui.Controller">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.Controller">
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
@@ -16,6 +16,26 @@
       <RowConstraints />
    </rowConstraints>
    <children>
-      <FlowPane prefHeight="500.0" prefWidth="275.0" />
+      <Pane prefHeight="500.0" prefWidth="275.0">
+         <children>
+            <Button fx:id="addButton" layoutX="9.0" layoutY="14.0" mnemonicParsing="false" onAction="#addTodo" text="Add Todo" />
+            <ScrollPane layoutY="69.0" prefHeight="432.0" prefWidth="275.0">
+               <content>
+                  <GridPane fx:id="todoGrid" prefHeight="411.0" prefWidth="272.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                  </GridPane>
+               </content>
+            </ScrollPane>
+         </children>
+      </Pane>
    </children>
 </GridPane>
