--- a/src/ui/ui.fxml
+++ b/src/ui/ui.fxml
@@ -16,12 +16,11 @@
       <RowConstraints />
    </rowConstraints>
    <children>
-      <Pane prefHeight="500.0" prefWidth="275.0" style="-fx-background-color: #ffffff;">
+      <Pane fx:id="mainPane" prefHeight="600.0" prefWidth="300.0" style="-fx-background-color: #ffffff;">
          <children>
-            <Button fx:id="addButton" layoutX="9.0" layoutY="14.0" mnemonicParsing="false" onAction="#addTodo" text="Add Todo" />
-            <ScrollPane fx:id="scrollPane" focusTraversable="false" hbarPolicy="NEVER" layoutY="69.0" prefHeight="432.0" prefWidth="275.0" style="-fx-focus-color: transparent; -fx-faint-focus-color: transparent;" vbarPolicy="ALWAYS">
+            <ScrollPane fx:id="scrollPane" focusTraversable="false" hbarPolicy="NEVER" layoutX="14.0" layoutY="186.0" prefHeight="403.0" prefWidth="275.0" styleClass=".scroll-pane" stylesheets="@main.css" vbarPolicy="ALWAYS">
                <content>
-                  <GridPane fx:id="todoGrid" prefHeight="411.0" prefWidth="255.0">
+                  <GridPane fx:id="todoGrid" prefHeight="399.0" prefWidth="252.0" styleClass="grid" stylesheets="@main.css">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
@@ -31,6 +30,10 @@
                   </GridPane>
                </content>
             </ScrollPane>
+            <TextField fx:id="title" layoutX="14.0" layoutY="10.0" prefHeight="39.0" prefWidth="237.0" promptText="Title" styleClass="grid" stylesheets="@main.css" />
+            <DatePicker fx:id="datePicker" layoutX="13.0" layoutY="57.0" prefHeight="39.0" prefWidth="275.0" promptText="Date" styleClass="grid" stylesheets="@main.css" />
+            <TextArea fx:id="description" layoutX="14.0" layoutY="100.0" prefHeight="83.0" prefWidth="275.0" promptText="Description" styleClass="grid" stylesheets="@main.css" wrapText="true" />
+            <Button fx:id="addButton" layoutX="251.0" layoutY="10.0" mnemonicParsing="false" onAction="#addTodo" prefHeight="39.0" prefWidth="38.0" text="+" />
          </children>
       </Pane>
    </children>
